[package]
name = "serde-deserialize-duplicates"
version = "0.1.1"
edition = "2021"
authors = ["Luke Bailey <baileylu@tcd.ie>"]
license = "MIT OR Apache-2.0"
description = "A rust crate with helper macros providing an alternate implementation of serde's Deserialize for cases when duplicate values exist in the source data"
repository = "https://github.com/baileyluTCD/serde-deserialize-duplicates/"
readme = "README.md"
keywords = ["serde", "duplicate", "json", "multiple", "overlapping"]
categories = ["data-structures", "encoding"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["extra-traits", "full"] }
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.120"
